Finally, working CI

--- a/.github/workflows/LearningCI.yml
+++ b/.github/workflows/LearningCI.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Make
       run: cd build && cmake .. && make
     - name: Tests
-      run: cd build && make ./tests
+      run: cd build && make ./tests && ./tests
