--- a/.github/workflows/LearningCI.yml
+++ b/.github/workflows/LearningCI.yml
@@ -15,9 +15,13 @@ jobs:
       run: sudo apt-get install -y googletest
     - name: More install for googletest
       run: sudo apt-get install libgtest-dev
+    - name: Install cppcheck
+      run: sudo apt-get install cppcheck -y
     - name: Config
       run: sh config.sh
     - name: Make
       run: cd build && cmake .. && make
+    - name: Run cppcheck
+      run: cppcheck --enable=all --supress=missingIncludeSystem *.c
     - name: Tests
       run: cd build && make ./tests && ./tests
