--- a/.github/workflows/LearningCI.yml
+++ b/.github/workflows/LearningCI.yml
@@ -28,3 +28,10 @@ jobs:
       run: cd build && make ./tests && ./tests
     - name: Run Valgrind
       run: cd build && valgrind --tool=memcheck --leak-check=yes ./tests
+    - name: Coverage testing
+      run: cd build && make coverage 
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: build/coverage/index.html
