--- a/.github/workflows/LearningCI.yml
+++ b/.github/workflows/LearningCI.yml
@@ -16,6 +16,8 @@ jobs:
       run: sudo apt-get install -y googletest
     - name: More install for googletest
       run: sudo apt-get install libgtest-dev
+    - name: Install gcovr
+      run: sudo apt-get install python3-setuptools && sudo pip3 install git+https://github.com/gcovr/gcovr.git
     - name: Install cppcheck
       run: sudo apt-get install cppcheck -y
     - name: Config
