--- a/.github/workflows/LearningCI.yml
+++ b/.github/workflows/LearningCI.yml
@@ -26,6 +26,8 @@ jobs:
       run: cd build && cmake .. && make
     - name: Run cppcheck
       run: cppcheck --enable=all --suppress=missingIncludeSystem *.c
+    - name: Run Valgrind
+      run: cd build && valgrind --tool=memcheck --leak-check=yes ./tests
     - name: Tests
       run: cd build && make coverage && ./tests
     - name: Archive code coverage results
